--- a/expertise.html
+++ b/expertise.html
@@ -9,7 +9,7 @@
 <nav>
     <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
         <div style="display: flex; align-items: center;">
-            <img alt="orange" src="img/logo%20Act%20%204%20change.webp" style="width: 160px; margin-right: 20px;">
+            <img alt="orange" src="img/logoAct4change.webp" style="width: 160px; margin-right: 20px;">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="expertise.html">Expertise</a></li>
             <li><a href="calculator.html">Calculez son RSE</a></li>
@@ -20,7 +20,9 @@
         </li>
     </ul>
 </nav>
+<section id="home">
 
+</section>
 <section id="footer">
     <footer>
         <h2>Contacts</h2>
