--- a/expertise.html
+++ b/expertise.html
@@ -16,7 +16,7 @@
         </div>
         <li style="display: flex; align-items: center;">
             <img src="img/avatar.png" alt="connexion" style="width: 25px; margin-right: 5px;">
-            <a href="connexion.html">Se connecter</a>
+            <a href="connexion.html">Mon compte</a>
         </li>
     </ul>
 </nav>
